# Deformetrica

./: .gitignore  Changelog.txt  README.md
deformetrica/app/: CMakeLists.txt  DeformetricaConfig.h.in
deformetrica/app/atlas_building/: estimateAtlas.txx  sparseAtlas2.cxx  sparseAtlas3.cxx
deformetrica/app/geodesicDist/: dist.txx  geodesicDist.cxx  geodesicDistAtlas.cxx  geodesicDistMulti.cxx
deformetrica/app/matching/: match.txx  sparseMatching2.cxx  sparseMatching3.cxx
deformetrica/app/shooting/: ShootAndFlow2.cxx  ShootAndFlow3.cxx  deform.txx
deformetrica/lib/: install_deformetrica.sh
deformetrica/lib/cuda_convolutions/: GaussFunction.h  GpuConv1D.cu  GpuConv1D.h  RadialFunction.h  ScalarRadialKernel.h
deformetrica/src/algo/deformable_objects/: DeformableMultiObject.h  DeformableMultiObject.txx  DeformableObject.h  DeformableObject.txx  Landmark.h  Landmark.txx  NonOrientedPolyLine.h  NonOrientedPolyLine.txx  NonOrientedSurfaceMesh.h  NonOrientedSurfaceMesh.txx  OrientedPolyLine.h  OrientedPolyLine.txx  OrientedSurfaceMesh.h  OrientedSurfaceMesh.txx  PointCloud.h  PointCloud.txx
deformetrica/src/algo/deformations/: AbstractDeformations.h  AbstractDeformations.txx  Diffeos.h  Diffeos.txx
deformetrica/src/algo/energy_minimization/: AtlasFunctionalValues.h  MatchFunctionalValues.h  SparseDiffeoAtlasEstimator.h  SparseDiffeoAtlasEstimator.txx  SparseDiffeoMatcher.h  SparseDiffeoMatcher.txx
deformetrica/src/algo/integrators/: BackwardGradientPropagatorUniversal.h  BackwardGradientPropagatorUniversal.txx
deformetrica/src/algo/kernels/: AbstractKernel.h  AbstractKernel.txx  CUDAExactKernel.h  CUDAExactKernel.txx  ExactKernel.h  ExactKernel.txx  FGTKernel.h  FGTKernel.txx  FastGauss.h  FastGauss.txx  KernelFactory.h  KernelFactory.txx  P3MKernel.h  P3MKernel.txx
deformetrica/src/algo/utilities/: SimpleTimer.cxx  SimpleTimer.h  itkFFTWCommon.h  myvtkPolyDataNormals.cxx  myvtkPolyDataNormals.h
deformetrica/src/io/: DeformableObjectParameters.cxx  DeformableObjectParameters.h  DeformableObjectParametersXMLFile.cxx  DeformableObjectParametersXMLFile.h  DeformableObjectReader.h  DeformableObjectReader.txx  SparseDiffeoParameters.cxx  SparseDiffeoParameters.h  SparseDiffeoParametersXMLFile.cxx  SparseDiffeoParametersXMLFile.h  readMatrixDLM.txx  writeMatrixDLM.txx
tests/atlas_building/: banana_1.vtk  banana_2.vtk  banana_3.vtk  paramDiffeos.xml  paramSurface.xml  template.vtk
tests/surface_matching/: paramDiffeos.xml  paramSurface.xml  sourceSurfaceMesh.vtk  targetSurfaceMesh.vtk
tutorials/AtlasConstruction1/: atlas_construction.sh  paramCurves.xml  paramDiffeos.xml  skull_template.vtk  viewData.m  viewResults.m
tutorials/AtlasConstruction2/: amyg_prototype.vtk  amyg_prototype_template.vtk  atlas_construction.sh  generateVTKmomenta.m  hippo_prototype.vtk  hippo_prototype_template.vtk  initializeTemplate.sh  paramAmyg.xml  paramDiffeos.xml  paramDiffeosRegistration.xml  paramHippo.xml  test_new_subject.sh
tutorials/Registration1/: deformBackward.sh  lattice.vtk  paramCurves.xml  paramDiffeos.xml  paramLattice.xml  registration.sh  viewData.m  viewResults_BackwardDeformation.m  viewResults_LatticeDeformation.m  viewResults_Registration.m
tutorials/Registration2/: deformLattice.sh  paramCurves4.xml  paramCurves6.xml  paramDiffeos.xml  paramLattice.xml  registration.sh  skull_australopithecus_curve_1.vtk  skull_australopithecus_curve_2.vtk  skull_australopithecus_curve_3.vtk  skull_australopithecus_curve_4.vtk  skull_australopithecus_curve_5.vtk  skull_australopithecus_curve_6.vtk  skull_erectus_curve_1.vtk  skull_erectus_curve_2.vtk  skull_erectus_curve_3.vtk  skull_erectus_curve_4.vtk  skull_erectus_curve_5.vtk  skull_erectus_curve_6.vtk  skull_habilis_curve_1.vtk  skull_habilis_curve_2.vtk  skull_habilis_curve_3.vtk  skull_habilis_curve_4.vtk  skull_habilis_curve_5.vtk  skull_habilis_curve_6.vtk  skull_neandertalis_curve_1.vtk  skull_neandertalis_curve_2.vtk  skull_neandertalis_curve_3.vtk  skull_neandertalis_curve_4.vtk  skull_neandertalis_curve_5.vtk  skull_neandertalis_curve_6.vtk  skull_sapiens_curve_1.vtk  skull_sapiens_curve_2.vtk  skull_sapiens_curve_3.vtk  skull_sapiens_curve_4.vtk  skull_sapiens_curve_5.vtk  skull_sapiens_curve_6.vtk  viewData.m  viewResults_LatticeDeformation.m  viewResults_Registration.m
utilities/matlab/: MomentaWriter.m  MultipleMomentaWriter.m  TestKeyWord.m  VTKPolyDataReader.m  readMomentaFile.m
utilities/meshes/: sphere1280.vtk  sphere20480.vtk  sphere320.vtk  sphere5120.vtk  sphere80.vtk
utilities/python/: functions.py  geodesicAtlas.py  geodesicCranio.py
utilities/vtk/: CMakeCache.txt  CMakeLists.txt  Makefile  MapsEllipsoidWithSource  MapsEllipsoidWithSource.cxx  cmake_install.cmake
